# handy

./: .gitignore  README.md  build.ps1  eslint.config.ts  index.html  main.py  pack.ps1  package.json  pyproject.toml  vite.config.ts
docs/: README.md  api.md  index.html  main.ts  scripts.md
src/: App.vue  app.py  main.py  main.ts
src-python/: pyproject.toml
src-python/handyapi/: __main__,py  app.py  main.py
src-python/handyapi/adb/: routes.py
src-python/handyapi/adb/core/: scriptFactory.py
src-python/handyapi/adb/models/: __init__.py  parametersModel.py  scriptModel.py
src-python/handyapi/adb/scripts/: example.ps1  example.py  scripts.json  scripts.yaml
src-python/handyapi/models/: responseModel.py
src-python/handyapi/settings/: __init__.py  router.py
src-python/handyapi/settings/models/: globalSettingsModel.py
src-python/handyapi/sysapi/: router.py
src-python/handyapi/utiles/: env.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/adb/: api.py  baseScript.py  deviceManager.py  models.py  parameters.py  routes.py  scriptFactory.py  scriptManager.py  script_manager.py
src/api/: adbDevice.ts  api.ts  settings.ts  sys.ts
src/assets/: icon.json  main.css
src/router/: index.ts
src/settings/: __init__.py  globalSetings.py  router.py
src/static/: index.html
src/stores/: commandStore.ts  globaleState.ts  tabs.ts  taskStore.ts
src/sysapi/: __init__.py
src/types/: swagger-ui-dist.d.ts  view.ts
src/utils/: icon.ts  server.ts
static/: index.html
static/assets/: fastApi-B0wULZkh.js  fastApi-DiUeKm8M.js  homePage-Ci3Jln-4.js  homePage-Cqwfojgz.js  index-KtPmtG2Z.js  index-VltHhS_7.js  mainPage-29whQdTf.js  mainPage-DbfmVTt9.js  taskDtail-BzxcHiMg.js  toolPage-BlhnetRF.js  (+7 more)
tests/: conftest.py
(+66 files in other folders)
