[project]
name = "handyapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.12",
    "pywebview>=5.4",
    "uvicorn>=0.34.3",
]

[dependency-groups]

[tool.autopep8]
max-line-length = 80

[build-system]
requires = ["setuptools>=42", "wheel", "nuitka", "toml"]
build-backend = "nuitka.distutils.Build"

[tool.setuptools.package-data]
some_package = []

[tool.nuitka]
nofollow-import-to = ["*.tests", "*.distutils"]
