[project]
name = "handyapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.12",
    "pywebview>=5.4",
    "uvicorn[standard]>=0.34.3",
]

[dependency-groups]
dev = [
    "nuitka>=2.7.13",
]

[tool.autopep8]
max-line-length = 80

[build-system]
requires = ["setuptools","nuitka", "toml"]
build-backend = "nuitka.distutils.Build"

[tool.nuitka]

standalone = true
show-progress = true
mingw64 = true
jobs = 8
include-data-file = [
    "../handy/dist/=static/",
    "src/adb/scripts=adb/scripts/",
    "README.md=.",
]
output-dir = "dist"
windows-disable-console = true
main = "src/main.py"
